# DiffSense

./: .gitignore  ARTIFACTS_REPOSITORY_README.md  CICD_OUTPUT_ENHANCEMENTS.md  JAVA_CVE_TIER_IMPLEMENTATION_SUMMARY.md  PACKAGING_CHECKLIST.md  PLUGIN_MIGRATION_GUIDE.md  QUICK_REFERENCE_TIER_CLASSIFICATION.md  README.md  README_BUG_REPORT.md  README_EN.md  README_multilang.md  README_parameterized_rules.md  RELEASE_NOTES_v2.2.5.md  RULES_EXPANSION_SUMMARY.md  SEARCH_ENGINE_SUBMISSION.md  SKILL.md  VERSION_OUTPUT_INFO.md  build-all-subtree.bat  build-all.bat  build-artifacts-only.bat  check-build.bat  cn_readme.md  convert_cve_dataset.py  debug_ast.py  deploy-to-github-pages.bat  deploy-to-github-pages.sh  diffsense.config.json  example_cve_conversion.py  index.html  pom.xml  pro_rules.yaml  robots.txt  run-inference-engine.js  sample_cve_dataset.json  script.js  sitemap.xml  style.css  submit-to-search-engines.bat  test-error-handling.js  test-safe-branch-switcher.js  (+7 more)
diffsense/: .dockerignore  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  README.md  banner.py  bench_out.json  cli.py  diffsense-comments.json  diffsense-report.html  diffsense-report.json  docker-build-test.ps1  file.md  gitlab-ci-example.en.yml  gitlab-ci-example.yml  main.py  out_report.json  pyproject.toml  report_in.json  requirements.txt  rule_metrics.json  run_audit.py  test_artifact.ps1  test_artifact.sh
diffsense/.rule/: ARCHITECTURE_PRINCIPLES.md
diffsense/adapters/: base.py  github_adapter.py  gitlab_adapter.py
diffsense/benchmarks/: manifest.yaml
plugin/: BUILD.md  (+11 more)
(+457 files in other folders)
